--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -38,7 +38,7 @@
               <a class="nav-link" href="/contatti/" >contatti</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/materiali/" >materiali</a>
+            <a class="nav-link" href="https:iris.monserrat.it/materiali/" >materiali</a>
           </li>
           </ul>
   
